@@ -83,6 +83,7 @@ our $next_color_pair = 6;
 
 our %shortcuts;
 our $cur_pos;
+our %histories;
 
 require 'args.pl';
 require 'cmdline.pl';
